<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/top_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_margin="5dp"
                android:id="@+id/product_image"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:src="@drawable/smak_icon"
                android:contentDescription="@string/recipe_description" />

            <TextView
                android:layout_margin="5dp"
                android:id="@+id/product_name"
                android:gravity="center"
                android:layout_below="@id/product_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/smak_agro_bill"
                android:textColor="#444"
                android:textSize="@dimen/heading"
                android:textStyle="bold" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>


    <RelativeLayout
        android:id="@+id/quantity_layout"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:layout_below="@+id/top_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/recipe_bill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/recipe_tag"
            android:textColor="#444"
            android:textSize="@dimen/info_text"
            android:textStyle="bold"
            android:scrollbars="vertical"
            android:maxLines="20"
            android:lines="50"
            android:minLines="6" />

    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/total_amount_layout"
       android:layout_below="@+id/quantity_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:background="@color/colorPrimary"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:layout_below="@+id/price_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:weightSum="3">

            <TextView
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/total_tag"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/heading"
                android:textStyle="bold" />

            <TextView
                android:layout_margin="10dp"
                android:id="@+id/total_amount"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/info_text"
                android:textStyle="bold" />

        </LinearLayout>


    </android.support.v7.widget.CardView>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginBottom="100dp"
        android:id="@+id/materialDescription"
        android:layout_below="@id/total_amount_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:text="@string/cart_bill_tag"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/info_sub"
        android:textStyle="normal"
        android:scrollbars="vertical"
        android:maxLines="5"
        android:lines="3"
        android:minLines="1"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="20dp" />

    </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.BottomNavigationView
        android:layout_margin="10dp"
        android:id="@+id/bottomNav"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_navigation_items"
        app:itemIconTint="#ffffff"
        app:itemTextColor="#ffffff" />

</RelativeLayout>