<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:id="@+id/app_icon"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/smak_icon" />

    <TextView
        android:id="@+id/tag_appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textSize="20sp"
        android:layout_below="@+id/app_icon"
        android:textColor="@color/colorWhite"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/tag_slogan"
        android:textColor="@color/colorWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tag_appName"
        android:layout_centerHorizontal="true"
        android:text="@string/app_slogan3" />

    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:weightSum="3">

        <ImageView
            android:layout_gravity="center"
            android:id="@+id/swe_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:src="@drawable/swe_logo" />

        <TextView
            android:id="@+id/swe_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:text="@string/swe"
            android:layout_weight="2"
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorWhite"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textSize="12sp" />

    </LinearLayout>

</RelativeLayout>